src/objects/sfsp__SalesNode__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__AssignmentBehavior__c</fullName>
        <label>Assignment Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exclusive</fullName>
                </value>
                <value>
                    <fullName>Non-Exclusive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfsp__Color__c</fullName>
        <label>Node Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__HierarchyReferenceData__c</fullName>
        <description>JSON array of imported hierarchy reference fields data</description>
        <label>Hierarchy Reference Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Sales Nodes</relationshipLabel>
        <relationshipName>SalesNodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>sfsp__SalesNode__c</referenceTo>
        <relationshipLabel>Sales Nodes</relationshipLabel>
        <relationshipName>SalesNodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfsp__QuotaRollup__c</fullName>
        <label>Quota Rollup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfsp__ReferenceFields__c</fullName>
        <description>JSON array of reference fields metadata</description>
        <label>Reference Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__RuleLogics__c</fullName>
        <description>JSON map of assignment object ids to rule logic</description>
        <label>Rule Logics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesPlanNode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Plan Node</label>
        <referenceTo>sfsp__SalesNode__c</referenceTo>
        <relationshipLabel>Sales Scenario Nodes</relationshipLabel>
        <relationshipName>SalesScenarioNodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Plan</label>
        <referenceTo>sfsp__SalesPlan__c</referenceTo>
        <relationshipLabel>Sales Nodes</relationshipLabel>
        <relationshipName>SalesNodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>sfsp__SalesNode__c</referenceTo>
        <relationshipLabel>Sales Territories</relationshipLabel>
        <relationshipName>SalesTerritories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__StampDataSourceId__c</fullName>
        <label>Stamp Data Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Node</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Nodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>